# TenThreeGameEngine

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini  main.cpp
103GE/: CMakeLists.txt
103GE-RenderEngine/: CMakeLists.txt
103GE-RenderEngine/src/: material.hpp  meshManager.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  utils.hpp  vertex.hpp
103GE/src/: engine.cpp  engine.hpp  input.hpp  inputManager.hpp  main.cpp
103GE/src/EobCS/: EobCS.cpp  EobCS.hpp  componentManager.hpp  entity.hpp  entityManager.hpp  systemManager.hpp
103GE/src/components/: exampleC.hpp
103GE/src/editor/: export.hpp
103GE/src/maths/: vector.hpp
103GE/src/resources/: resource.hpp
EobCS/: EobCS.cpp  EobCS.hpp  componentManager.hpp  entity.hpp  entityManager.hpp  root.hpp  scene.hpp  systemManager.hpp
cmake/: Findglfw3.cmake
imgui/: CMakeLists.txt
include/glad/: glad.h
include/glm/: CMakePresets.json
include/glm/gtx/: component_wise.hpp
lib/: glad.c
src/: main.cpp
src/core/: engine.cpp  engine.hpp  node.cpp  node.hpp  tree.cpp  tree.hpp
src/editor/: editor.cpp  editor.hpp  files_tab.cpp  files_tab.hpp  project_manager.cpp  project_manager.hpp  scene_tab.cpp  scene_tab.hpp
test/sample_project/.configure/: imgui.ini  project.ttge
