cmake_minimum_required(VERSION 4.2)

project(TenThreeGameEngine VERSION 1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)

set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type" FORCE)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(external)

file(GLOB_RECURSE TEN_THREE_SOURCES src/*.cpp)

add_executable(${PROJECT_NAME} ${TEN_THREE_SOURCES})

target_link_libraries(${PROJECT_NAME} PRIVATE imgui glm stb)
target_include_directories(${PROJECT_NAME} PRIVATE src ${TEN_THREE_EXTERNAL_LIB_INCLUDE_DIRS})
